--- a/.github/workflows/security.yaml
+++ b/.github/workflows/security.yaml
@@ -1,27 +1,57 @@
-# .github/workflows/security-pipeline.yaml (Dosya adını değiştirebilirsin)
+# .github/workflows/security-pipeline.yaml
 
-name: Security Pipeline (Build, SBOM, SAST)
+name: Security Pipeline (Secrets, SAST, Build, SBOM)
 
 on:
   push:
-    branches: [ main ] # Veya kendi ana branch'inizin adı
+    branches: [ main ]
   workflow_dispatch:
 
 jobs:
-  # ----- JOB 1: Build Docker Image and Generate SBOM -----
+  # ----- JOB 1: Secrets Scan, Build Docker Image and Generate SBOM -----
   build-and-sbom:
-    name: Build and SBOM Generation
+    name: Secrets, Build and SBOM
     runs-on: ubuntu-latest
     steps:
       # 1.1: Kodu al
       - name: Checkout repository
+        # Fetch depth 0 needed for Gitleaks to scan full history
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
-      # 1.2: Docker Buildx'i kur
+      # -------------------- YENİ ADIMLAR: Gitleaks Secret Taraması --------
+      # 1.2: Gitleaks ile Secret Taraması
+      - name: Run Gitleaks Secrets Scan
+        uses: gitleaks/gitleaks-action@v2
+        # Secret bulursa çıkış kodu 1 verir. Workflow'a devam etmek için:
+        continue-on-error: true
+        env:
+          # GitHub token genellikle API etkileşimleri için önerilir.
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          # Rapor formatını SARIF olarak ayarla
+          GITLEAKS_REPORT_FORMAT: sarif
+          # Raporun kaydedileceği yolu belirt (varsayılan da bu olabilir)
+          GITLEAKS_REPORT_PATH: "${{ github.workspace }}/gitleaks.sarif"
+          # Bulunan secret'ların loglarda görünmesini engelle (güvenlik için)
+          GITLEAKS_REDACT: "true"
+
+      # 1.3: Gitleaks SARIF dosyasını GitHub Security Tab'a yükle
+      - name: Upload Gitleaks SARIF to GitHub Security Tab
+        uses: github/codeql-action/upload-sarif@v3
+        # Gitleaks adımı secret bulduğu için başarısız işaretlense bile yükle
+        if: always()
+        with:
+          sarif_file: "${{ github.workspace }}/gitleaks.sarif"
+          # İsteğe bağlı: Semgrep'ten ayırmak için kategori belirtebilirsin
+          # category: gitleaks-secrets
+      # -------------------- Gitleaks Taraması Bitti ----------------------
+
+      # 1.4: Docker Buildx'i kur (Adım numarası güncellendi)
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      # 1.3: Docker imajını build et
+      # 1.5: Docker imajını build et (Adım numarası güncellendi)
       - name: Build Docker image
         uses: docker/build-push-action@v5
         with:
@@ -31,19 +61,19 @@ jobs:
           load: true
           tags: juice-shop-local:latest
 
-      # 1.4: Syft SBOM aracını kur
+      # 1.6: Syft SBOM aracını kur (Adım numarası güncellendi)
       - name: Install Syft
         run: |
           curl -sSfL https://raw.githubusercontent.com/anchore/syft/main/install.sh | sh -s -- -b /usr/local/bin
           syft version
 
-      # 1.5: SBOM oluştur (SPDX ve CycloneDX formatlarında)
+      # 1.7: SBOM oluştur (Adım numarası güncellendi)
       - name: Generate SBOM from Docker image
         run: |
           syft packages docker:juice-shop-local:latest -o spdx-json=sbom-spdx.json
           syft packages docker:juice-shop-local:latest -o cyclonedx-json=sbom-cyclonedx.json
 
-      # 1.6: Oluşturulan SBOM dosyalarını artifact olarak kaydet
+      # 1.8: Oluşturulan SBOM dosyalarını artifact olarak kaydet (Adım numarası güncellendi)
       - name: Upload SBOM artifact (SPDX)
         uses: actions/upload-artifact@v4
         with:
@@ -59,20 +89,17 @@ jobs:
   # ----- JOB 2: SAST Scan using Semgrep (runs after Job 1) -----
   sast-scan:
     name: SAST Scan (Semgrep)
-    # Bu işin başlaması için 'build-and-sbom' işinin başarıyla bitmesi gerekir
     needs: build-and-sbom
     runs-on: ubuntu-latest
-    # Adımlar Semgrep konteyneri içinde çalışacak
     container: returntocorp/semgrep
-
     steps:
-      # 2.1: Kodu al (Konteyner içinde /github/workspace altına alınır)
-      # NOT: Her iş ayrı bir ortamda başlayabilir, bu yüzden checkout genellikle tekrar gerekir.
+      # 2.1: Kodu al
       - name: Checkout repository
         uses: actions/checkout@v4
 
       # 2.2: Semgrep taramasını çalıştır ve sonucu kaydet
       - name: Run Semgrep Scan
+        continue-on-error: true
         run: |
           mkdir -p semgrep/results
           semgrep ci --config=auto --sarif --output=semgrep/results/semgrep.sarif
@@ -87,8 +114,7 @@ jobs:
       # 2.4: Semgrep SARIF dosyasını indirilebilir artifact olarak yükle
       - name: Upload Semgrep report as Artifact
         uses: actions/upload-artifact@v4
-        # 'if: always()' tarama başarısız olsa bile yüklemeyi dener.
         if: always()
         with:
-          name: semgrep-sast-report # Artifact adı
-          path: semgrep/results/semgrep.sarif # Yüklenecek dosyanın yolu
+          name: semgrep-sast-report
+          path: semgrep/results/semgrep.sarif
