--- a/.github/workflows/security.yaml
+++ b/.github/workflows/security.yaml
@@ -8,19 +8,15 @@ on:
   workflow_dispatch:
 
 jobs:
-  # ----- JOB 1: Secrets Scan, Build Docker Image and Generate SBOM -----
   build-and-sbom:
     name: Secrets, Build and SBOM
     runs-on: ubuntu-latest
     steps:
-      # 1.1: Kodu al
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      # -------------------- Gitleaks Secret Taraması (Güncellendi) --------
-      # 1.2: Gitleaks ile Secret Taraması
       - name: Run Gitleaks Secrets Scan
         uses: gitleaks/gitleaks-action@v2
         continue-on-error: true
@@ -28,26 +24,19 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITLEAKS_REDACT: "true"
           GITLEAKS_REPORT_FORMAT: "sarif"
-          # Yolu basitleştirelim, sadece dosya adı:
-          GITLEAKS_REPORT_PATH: "gitleaks.sarif" # <-- DEĞİŞTİ
+          GITLEAKS_REPORT_PATH: "gitleaks.sarif"
 
-      # 1.3 (Hata Ayıklama İçin): Dosyaları Listele
-      # Gitleaks adımından sonra gitleaks.sarif dosyasının varlığını kontrol et.
       - name: List files after Gitleaks
         run: ls -la
-        if: always() # Her durumda çalışsın ki görelim
+        if: always()
 
-      # 1.4: Gitleaks SARIF dosyasını GitHub Security Tab'a yükle (Güncellendi)
       - name: Upload Gitleaks SARIF to GitHub Security Tab
         uses: github/codeql-action/upload-sarif@v3
         if: always()
         with:
-          # Yolu basitleştirelim, sadece dosya adı:
-          sarif_file: "gitleaks.sarif" # <-- DEĞİŞTİ
-          # category: gitleaks-secrets # İsteğe bağlı
-      # -------------------- Gitleaks Taraması Bitti ----------------------
+          sarif_file: "gitleaks.sarif" 
 
-      # 1.5: Docker Buildx'i kur (Adım numarası güncellendi)
+      
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
         # ... (Diğer adımlar aynı kalır, sadece numaraları değişir) ...
