--- a/.github/workflows/security.yaml
+++ b/.github/workflows/security.yaml
@@ -21,6 +21,7 @@ jobs:
         uses: gitleaks/gitleaks-action@v2
         continue-on-error: true
         env:
+          GITLEAKS_ENABLE_UPLOAD_ARTIFACT: "true"
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITLEAKS_REDACT: "true"
           GITLEAKS_REPORT_FORMAT: "sarif"
