--- a/.github/workflows/security.yaml
+++ b/.github/workflows/security.yaml
@@ -32,10 +32,11 @@ jobs:
         if: always()
 
       - name: Upload Gitleaks SARIF to GitHub Security Tab
-        uses: github/codeql-action/upload-sarif@v3
+        uses: github/codeql-action/upload-sarif@v4
         if: always()
         with:
-          sarif_file: "gitleaks.sarif" 
+          name: gitleaks.sarif
+          path: .
 
       
       - name: Set up Docker Buildx
