--- a/.github/workflows/security.yaml
+++ b/.github/workflows/security.yaml
@@ -32,7 +32,7 @@ jobs:
         if: always()
 
       - name: Upload Gitleaks SARIF to GitHub Security Tab
-        uses: github/codeql-action/upload-sarif@v4
+        uses: actions/upload-artifact@v4
         if: always()
         with:
           name: gitleaks.sarif
